--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Somos GlobanTerra. Hacemos Ingeniería del Terreno de forma más precisa, más rápida y más eficiente">
+    <meta name="keywords" content="topografía, aerofotogrametría, drones, ingeniería civil, obras, rosario, construcción, relevamiento">
 
+    <link rel="shortcut icon" href="./assets/img/logo.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -16,7 +19,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <title>GlobanTerra</title>
+    <title>GlobanTerra | Ingeniería del Terreno</title>
 </head>
 
 <body>
@@ -24,41 +27,49 @@
     <script>
         AOS.init();
     </script>
-
     <!--header starts-->
     <header>
         <div class="container-fluid">
             <a class="text-decoration-none" href="./index.html">
-                <img class="d-block m-auto" src="./assets/img/logo.png" alt="logo globanterra">
-                <h1 class="text-center">GlobanTerra</h1>
+                <img class="d-block m-auto" src="./assets/img/logo.svg" alt="logo globanterra">
+                <h1 class="fw-bold text-center">GlobanTerra</h1>
             </a>
         </div>
     </header>
     <!--header ends-->
-
     <!--nav starts-->
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
-        <div class="container-fluid">
+        <div id="navContainer" class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-                <div class="navbar-nav m-auto pe-4">
-                    <div class="container-fluid mx-3">
-                        <a href="./index.html">Home</a>
-                    </div>
-                    <div class="container-fluid mx-3">
-                        <a href="./pages/servicios.html">Servicios</a>
-                    </div>
-                    <div class="container-fluid mx-3">
-                        <a href="./pages/experiencias.html">Experiencias</a>
-                    </div>
-                    <div class="container-fluid mx-3">
-                        <a href="./pages/equipo.html">Equipo</a>
-                    </div>
-                    <div class="container-fluid mx-3">
-                        <a href="./pages/contacto.html">Contacto</a>
-                    </div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div id="navbar" class="navbar-nav m-auto">
+                    <a href="./index.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Home</p>
+                        </div>
+                    </a>
+                    <a href="./pages/servicios.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Servicios</p>
+                        </div>
+                    </a>
+                    <a href="./pages/experiencias.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Experiencias</p>
+                        </div>
+                    </a>
+                    <a href="./pages/equipo.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Equipo</p>
+                        </div>
+                    </a>
+                    <a href="./pages/contacto.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Contacto</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -74,25 +85,25 @@
                     <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="1"></li>
                     <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="assets/img/gallery1.png" class="d-block w-100" alt="aerial-image-river">
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h5 class="display-2">Ingeniería del Terreno</h5>
+                <div id="carousel-inner"class="carousel-inner">
+                    <div id="carousel-item-1" class="carousel-item active">
+                        <img src="assets/img/gallery1.png" class="d-block w-100" alt="vista aérea de río">
+                        <div id="carousel-caption-1" class="carousel-caption d-none d-sm-block">
+                            <h2 class="display-2">Ingeniería del Terreno</h2>
                             <p class="fs-1">Más precisa. Más rápida. Más eficiente.</p>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/gallery2.png" class="d-block w-100" alt="aerial-image-coast-1">
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h5 class="display-2">Innovación en modelado del terreno</h5>
+                    <div id="carousel-item-2" class="carousel-item">
+                        <img src="assets/img/gallery2.png" class="d-block w-100" alt="vista aérea costa de río">
+                        <div id="carousel-caption-2" class="carousel-caption d-none d-sm-block">
+                            <h2 class="display-2">Innovación en modelado del terreno</h2>
                             <p class="fs-1">Productos de alta resolución, a menor costo.</p>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/gallery3.png" class="d-block w-100" alt="aerial-image-coast-2">
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h5 class="display-2">Tecnología al servicio del medio ambiente</h5>
+                    <div id="carousel-item-3" class="carousel-item">
+                        <img src="assets/img/gallery3.png" class="d-block w-100" alt="vista aérea costa de río">
+                        <div id="carousel-caption-3" class="carousel-caption d-none d-sm-block">
+                            <h2 class="display-2">Tecnología al servicio del medio ambiente</h2>
                             <p class="fs-1">Menos emisiones. Menores plazos. Menor riesgo.</p>
                         </div>
                     </div>
@@ -110,41 +121,52 @@
         <!--carousel ends-->
         <!--stats start-->
         <section id="stats" class="container-fluid">
-            <div class="row px-5">
-                <div class="col-lg-3 py-3">
-                    <div data-aos="zoom-in" data-aos-duration="1000">
-                        <h4>Horas de vuelo</h4>
-                        <p>29</p>
+            <div class="row px-3">
+                <article class="col-sm-12 col-md-6 col-lg-3 px-3 py-3">
+                    <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="who">
+                        <div class="card-body">
+                            <h3 class="text-center fw-bold display-5">Horas de <br> vuelo</h3>
+                            <p class="text-center display-6">56</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 py-3">
-                    <div data-aos="zoom-in" data-aos-duration="1000">
-                        <h4>Imágenes capturadas</h4>
-                        <p>5.200</p>
+                </article>
+                <article class="col-sm-12 col-md-6 col-lg-3 px-3 py-3">
+                    <div class="card h-100" data-aos="fade-left" data-aos-duration="1200" id="what">
+                        <div class="card-body">
+                            <h3 class="text-center fw-bold display-5">Imágenes capturadas</h3>
+                            <p class="text-center display-6">6.540</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 py-3">
-                    <div data-aos="zoom-in" data-aos-duration="1000">
-                        <h4>Superficie relevada</h4>
-                        <p>854.250 m<sup>2</sup>
-                            <p>
+                </article>
+                <article class="col-sm-12 col-md-6 col-lg-3 px-3 py-3">
+                    <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="how">
+                        <div class="card-body">
+                            <h3 class="text-center fw-bold display-5">Superficie <br> relevada</h3>
+                            <p class="text-center display-6">954.250 m<sup>2</sup></p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 py-3">
-                    <div data-aos="zoom-in" data-aos-duration="1000">
-                        <h4>Hs de procesamiento computacional</h4>
-                        <p>32</p>
+                </article>
+                <article class="col-sm-12 col-md-6 col-lg-3 px-3 py-3">
+                    <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="how">
+                        <div class="card-body">
+                            <h3 class="text-center fw-bold display-5">Modelos digitales de elevación</h3>
+                            <div class="statBox">
+                                <p class="text-center display-6">7</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </article>
+            </div>
         </section>
         <!--stats end-->
+        
         <!--description starts-->
         <section id="who-what-how" class="container-fluid">
-            <div class="row px-5">
+            <div class="row px-3">
                 <article class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
                     <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="who">
                         <div class="card-body">
-                            <h5 class="card-title display-4">Quienes somos</h5>
+                            <h3 class="fw-bold card-title display-4">Quienes somos</h3>
                             <p class="card-text fs-4 py-3">Somos una startup de Ingeniería Civil especializada en el terreno.</p>
                             <p class="card-text fs-4">Contamos con tecnología y know-how para generar productos topográficos y modelos 3D de alta resolución en menos tiempo que con las técnicas tradicionales.</p>
                             <p class="card-text fs-4">Trabajamos día a día para mejorar la productividad en el desarrollo de proyectos de ingeniería.
@@ -155,7 +177,7 @@
                 <article class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
                     <div class="card h-100" data-aos="fade-left" data-aos-duration="1200" id="what">
                         <div class="card-body">
-                            <h5 class="card-title display-4">Que buscamos</h5>
+                            <h3 class="fw-bold card-title display-4">Que buscamos</h3>
                             <p class="card-text fs-4 py-3">Nuestro principal objetivo es mejorar la productividad y la seguridad en el proyecto y construcción de obras de ingeniería, reduciendo tiempos, incrementando la precisión en la inspección y control, y reduciendo riesgos en
                                 zonas de difícil acceso.</p>
                             <p class="card-text fs-4">Acortamos los tiempos de los proyectos y la supervisión de obras y simplificamos el acceso y la seguridad a sitios complejos a través de la combinación de tecnología de aeronaves no tripuladas y receptores GNSS.
@@ -166,7 +188,7 @@
                 <article class="col-sm-12 col-md-12 col-lg-4 px-3 py-3">
                     <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="how">
                         <div class="card-body">
-                            <h5 class="card-title display-4">Como lo hacemos</h5>
+                            <h3 class="fw-bold card-title display-4">Como lo hacemos</h3>
                             <p class="card-text fs-4 py-3">Las técnicas que utilizamos son 100% escalables. Capturamos información espacial, la georreferenciamos y construimos modelos digitales de alta resolución que describen en profundidad la forma y textura de hechos existentes.</p>
                             <p class="card-text fs-4">Desde modelización de estructuras de edificios hasta infraestructuras de decenas de hectáreas, aplicamos tecnología para lograr soluciones de calidad.
                             </p>
@@ -180,34 +202,11 @@
     <!--main ends-->
     <!--footer starts-->
     <footer>
-        <!--nav starts-->
-        <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-                    <div class="navbar-nav m-auto pe-4">
-                        <div class="container-fluid mx-3">
-                            <a href="./index.html">Home</a>
-                        </div>
-                        <div class="container-fluid mx-3">
-                            <a href="./pages/servicios.html">Servicios</a>
-                        </div>
-                        <div class="container-fluid mx-3">
-                            <a href="./pages/experiencias.html">Experiencias</a>
-                        </div>
-                        <div class="container-fluid mx-3">
-                            <a href="./pages/equipo.html">Equipo</a>
-                        </div>
-                        <div class="container-fluid mx-3">
-                            <a href="./pages/contacto.html">Contacto</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <!--nav ends-->
+        <!--separator starts-->
+        <section class="container-fluid" id="separator">
+            <h2 class="text-center">Contactate con nosotros</h2>
+        </section>
+        <!--separator ends-->
         <!--social networks start-->
         <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row" id="social-networks">
             <div class="container pt-3">
@@ -247,18 +246,7 @@
         <!--credits end-->
     </footer>
     <!--footer ends-->
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
 </body>
-
 </html>
