--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -5,18 +5,23 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../assets/img/logo.png">
+    <meta name="description" content="Conocé nuestros profesionales">
+    <meta name="keywords" content="equipo, ingenieros, curriculum">
+
+    <!--Agregar meta-->
+
+    <link rel="shortcut icon" href="../assets/img/logo.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- My CSS-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <!-- AOS CSS and JS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <title>GlobanTerra</title>
+    <title>GlobanTerra | Equipo</title>
 </head>
 
 <body>
@@ -29,35 +34,45 @@
     <header>
         <div class="container-fluid">
             <a class="text-decoration-none" href="../index.html">
-                <img class="mainLogo d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
-                <h1 class="logoText text-center fw-bold">GlobanTerra</h1>
+                <img class="d-block m-auto" src="../assets/img/logo.svg" alt="logo globanterra">
+                <h1 class="fw-bold text-center">GlobanTerra</h1>
             </a>
         </div>
     </header>
     <!--header ends-->
     <!--nav starts-->
-    <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <div id="navContainer" class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-                <div class="navbar-nav m-auto pe-4">
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="../index.html">Home</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./servicios.html">Servicios</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./experiencias.html">Experiencias</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./equipo.html">Equipo</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./contacto.html">Contacto</a>
-                    </div>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div id="navbar" class="navbar-nav m-auto">
+                    <a href="../index.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Home</p>
+                        </div>
+                    </a>
+                    <a href="./servicios.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Servicios</p>
+                        </div>
+                    </a>
+                    <a href="./experiencias.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Experiencias</p>
+                        </div>
+                    </a>
+                    <a href="./equipo.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Equipo</p>
+                        </div>
+                    </a>
+                    <a href="./contacto.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Contacto</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -65,20 +80,20 @@
     <!--nav ends-->
     <!--main starts-->
     <main>
-        <div class="title">
-            <h1 class="text-center">Nuestro equipo</h1>
+        <div class="container-fluid title">
+            <h2 class="fw-bold text-center">Nuestro equipo</h2>
         </div>
         <section id="equipo">
             <article id="nicolasbolcatto">
                 <div class="card myContainer m-4">
                     <div class="row g-0 m-3">
-                        <div class="col-sm-12 col-md-3">
-                            <img class="img-thumbnail h-100" src=../assets/img/nicolas.jpg alt="foto-nicolas">
+                        <div class="col-sm-12 col-md-3 m-auto">
+                            <img class="img-thumbnail h-auto w-100" src=../assets/img/nicolas.jpg alt="foto-nicolas">
                         </div>
                         <div class="col-sm-12 col-md-9">
                             <div class="card-body">
-                                <h2 class="card-title">MSc. Ing. Nicolás G. Bolcatto</h2>
-                                <p class="fs-4 card-text">Nicolás es Ingeniero Civil por la Universidad Nacional de Rosario y Máster en Ingeniería del Terreno por la Universidad Politécnica de Cataluña. Se desempeña desde hace más de 5 años como Consultor Geotécnico en la firma
+                                <h3 class="display-5 fw-bold card-title">MSc. Ing. Nicolás G. Bolcatto</h3>
+                                <p class="pt-3 fs-3 card-text">Nicolás es Ingeniero Civil por la Universidad Nacional de Rosario y Máster en Ingeniería del Terreno por la Universidad Politécnica de Cataluña. Se desempeña desde hace más de 5 años como Consultor Geotécnico en la firma
                                     Torres y Vercelli S.R.L., habiendo desarrollado más de 50 informes y memorias de ingeniería. Desde el año 2015 es docente de grado, y desde 2019 de postgrado en la Escuela de Ingeniería civil de la Universidad Nacional
                                     de Rosario. Actualmente se encuentra completando sus estudios de Maestría en Ingeniería Vial y Especialización en Infraestructura de Datos Espaciales.</p>
                             </div>
@@ -89,13 +104,13 @@
             <article id="manuelodisio">
                 <div class="card myContainer m-4">
                     <div class="row g-0 m-3">
-                        <div class="col-sm-12 col-md-3">
-                            <img class="img-thumbnail h-100" src=../assets/img/manuel.jpg alt="foto-manuel">
+                        <div class="col-sm-12 col-md-3 m-auto">
+                            <img class="img-thumbnail h-auto w-100" src=../assets/img/manuel.jpg alt="foto-manuel">
                         </div>
                         <div class="col-sm-12 col-md-9">
                             <div class="card-body">
-                                <h2 class="card-title">Ing. Manuel Matías Odisio</h2>
-                                <p class="fs-4 card-text">Manuel es Ingeniero Civil por la Universidad Nacional de Rosario. Se desempeña desde hace más de 5 años como responsable de Oficina Técnica en la firma Torres y Vercelli S.R.L. Desde el año 2015 ha planificado, supervisado
+                                <h3 class="display-5 fw-bold card-title">Ing. Manuel Matías Odisio</h3>
+                                <p class="pt-3 fs-3 card-text">Manuel es Ingeniero Civil por la Universidad Nacional de Rosario. Se desempeña desde hace más de 5 años como responsable de Oficina Técnica en la firma Torres y Vercelli S.R.L. Desde el año 2015 ha planificado, supervisado
                                     y procesado más de 50 estudios geotécnicos y topográficos en campo y en laboratorio de mecánica de suelos, a lo largo de toda la Argentina, como así también en Uruguay. Actualmente continúa perfeccionándose mediante
                                     cursos de posgrado en el área de Ingeniería del Terreno.</p>
                             </div>
@@ -108,36 +123,13 @@
     <!--main ends-->
     <!--footer starts-->
     <footer>
-        <!--nav starts-->
-        <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-                    <div class="navbar-nav m-auto pe-4">
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="../index.html">Home</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./servicios.html">Servicios</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./experiencias.html">Experiencias</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./equipo.html">Equipo</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./contacto.html">Contacto</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <!--nav ends-->
+        <!--separator starts-->
+        <section class="container-fluid" id="separator">
+            <h2 class="text-center">Contactate con nosotros</h2>
+        </section>
+        <!--separator ends-->
         <!--social networks start-->
-        <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row">
+        <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row" id="social-networks">
             <div class="container pt-3">
                 <a id="email" href="mailto:contacto@globanterra.com.ar">
                     <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
@@ -176,17 +168,8 @@
     </footer>
     <!--footer ends-->
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!--Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-
 </body>
-
 </html>
