--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -5,18 +5,23 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../assets/img/logo.png">
+    <meta name="description" content="Conocé nuestras experiencias y los resultados obtenidos en cada una de ellas">
+    <meta name="keywords" content="experiencias, trabajos, realizados, resultados">
+
+    <!--Agregar meta-->
+
+    <link rel="shortcut icon" href="../assets/img/logo.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- My CSS-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <!-- AOS CSS and JS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <title>GlobanTerra</title>
+    <title>GlobanTerra | Experiencias</title>
 </head>
 
 <body>
@@ -29,45 +34,54 @@
     <header>
         <div class="container-fluid">
             <a class="text-decoration-none" href="../index.html">
-                <img class="mainLogo d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
-                <h1 class="logoText text-center fw-bold">GlobanTerra</h1>
+                <img class="d-block m-auto" src="../assets/img/logo.svg" alt="logo globanterra">
+                <h1 class="fw-bold text-center">GlobanTerra</h1>
             </a>
         </div>
     </header>
     <!--header ends-->
     <!--nav starts-->
-    <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <div id="navContainer" class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-                <div class="navbar-nav m-auto pe-4">
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="../index.html">Home</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./servicios.html">Servicios</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./experiencias.html">Experiencias</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./equipo.html">Equipo</a>
-                    </div>
-                    <div class="myButton container-fluid">
-                        <a class="myButtonText" href="./contacto.html">Contacto</a>
-                    </div>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div id="navbar" class="navbar-nav m-auto">
+                    <a href="../index.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Home</p>
+                        </div>
+                    </a>
+                    <a href="./servicios.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Servicios</p>
+                        </div>
+                    </a>
+                    <a href="./experiencias.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Experiencias</p>
+                        </div>
+                    </a>
+                    <a href="./equipo.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Equipo</p>
+                        </div>
+                    </a>
+                    <a href="./contacto.html" class="mx-3">
+                        <div class="myButton--rounded container-fluid">
+                            <p class="m-0">Contacto</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </nav>
     <!--nav ends-->
-
     <!--main starts-->
     <main>
-        <div class="title">
-            <h1 class="text-center">Nuestras experiencias</h1>
+        <div class="container-fluid title">
+            <h2 class="fw-bold text-center">Nuestras experiencias</h2>
         </div>
         <section id=experiencias>
             <article id="barranca">
@@ -78,16 +92,16 @@
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <div class="card-body">
-                                <h2 class="card-title">Relevamiento Barranca Fray Luis Beltrán</h2>
-                                <p class="fs-4 card-text">Presentamos el relevamiento aerofotogramétrico realizado en septiembre de 2020 para el análisis de estabilidad de la barranca. El relevamiento fue realizado con un dron Phantom 4V2.0, con dos vuelos de 13 y 18 minutos de
+                                <h3 class="display-5 fw-bold card-title">Relevamiento Barranca Fray Luis Beltrán</h3>
+                                <p class="pt-3 fs-3 card-text">Presentamos el relevamiento aerofotogramétrico realizado en septiembre de 2020 para el análisis de estabilidad de la barranca. El relevamiento fue realizado con un dron Phantom 4V2.0, con dos vuelos de 13 y 18 minutos de
                                     duración respectivamente, a 60 m. de altura y capturando un total de 448 imágenes.<br> El modelo resultante tiene una resolución GSD de 1,64 cm/pixel, cubriendo un área de 3,24 hectáreas y fue procesado computacionalmente
                                     en apenas 2,2 horas.<br> Entre los productos derivados del modelo destacamos:</p>
-                                <ul class="fs-4">
-                                    <li>Nube de puntos densa</li>
-                                    <li>Curvas de nivel cada 20 cm.</li>
-                                    <li>Ortomosaico georreferenciado con precisión centimétrica</li>
-                                    <li>9 Perfiles topográficos de barranca</li>
-                                    <li>Ortofachada frontal de barranca</li>
+                                <ul>
+                                    <li class="fs-3">Nube de puntos densa</li>
+                                    <li class="fs-3">Curvas de nivel cada 20 cm.</li>
+                                    <li class="fs-3">Ortomosaico georreferenciado con precisión centimétrica</li>
+                                    <li class="fs-3">9 Perfiles topográficos de barranca</li>
+                                    <li class="fs-3">Ortofachada frontal de barranca</li>
                                 </ul>
                             </div>
                         </div>
@@ -103,14 +117,14 @@
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <div class="card-body">
-                                <h2 class="card-title">Relevamiento RNA012 Tramo Zavalla-Roldán</h2>
-                                <p class="fs-4 card-text">Presentamos el modelo 3D de alta resolución obtenido para 1 km de la Ruta Nacional A012 en el tramo Zavalla-Roldán. El relevamiento fue realizado con un dron Phantom 4V2.0, con una duración total de vuelo de 12:33, a 90
+                                <h3 class="display-5 fw-bold card-title">Relevamiento RNA012 Tramo Zavalla-Roldán</h3>
+                                <p class="pt-3 fs-3  card-text">Presentamos el modelo 3D de alta resolución obtenido para 1 km de la Ruta Nacional A012 en el tramo Zavalla-Roldán. El relevamiento fue realizado con un dron Phantom 4V2.0, con una duración total de vuelo de 12:33, a 90
                                     m. de altura y capturando un total de 249 imágenes.<br> El modelo resultante tiene una resoluciójn GSD de 2,56 cm/pixel, cubriendo un área de 22,57 hectáreas y fue procesado computacionalmente en apenas 1,7 horas.<br>                                    Entre los resultados obtenidos destacamos:</p>
-                                <ul class="fs-4">
-                                    <li>Identificación de patrones de fisuración de calzada</li>
-                                    <li>Relevamiento de geometría y textura de cunetas</li>
-                                    <li>Identificación y medición de alcantarillas</li>
-                                    <li>Identificación y metraje de bacheos, con georreferenciación</li>
+                                <ul>
+                                    <li class="fs-3">Identificación de patrones de fisuración de calzada</li>
+                                    <li class="fs-3">Relevamiento de geometría y textura de cunetas</li>
+                                    <li class="fs-3">Identificación y medición de alcantarillas</li>
+                                    <li class="fs-3">Identificación y metraje de bacheos, con georreferenciación</li>
                                 </ul>
                             </div>
                         </div>
@@ -122,36 +136,13 @@
     <!--main page ends-->
     <!--footer starts-->
     <footer>
-        <!--nav starts-->
-        <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-                    <div class="navbar-nav m-auto pe-4">
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="../index.html">Home</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./servicios.html">Servicios</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./experiencias.html">Experiencias</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./equipo.html">Equipo</a>
-                        </div>
-                        <div class="myButton container-fluid">
-                            <a class="myButtonText" href="./contacto.html">Contacto</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <!--nav ends-->
+        <!--separator starts-->
+        <section class="container-fluid" id="separator">
+            <h2 class="text-center">Contactate con nosotros</h2>
+        </section>
+        <!--separator ends-->
         <!--social networks start-->
-        <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row">
+        <section id="social-networks" class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row">
             <div class="container pt-3">
                 <a id="email" href="mailto:contacto@globanterra.com.ar">
                     <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
@@ -190,17 +181,8 @@
     </footer>
     <!--footer ends-->
 
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
 </body>
-
 </html>
