Minor change in contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -201,7 +201,7 @@
             
             <fieldset class="container-fluid px-3" id="send-button">
                 <div id="formButtons" class="text-center">
-                    <button type="button" class="myButton--rounded fw-bold fs-2 mx-5 px-5 py-2 btn btn-lg">Cancelar</button>
+                    <button type="button" class="myButton--rounded fw-bold fs-2 mx-5 px-5 py-2 btn btn-lg">Enviar</button>
                 </div>
             </fieldset>
             <!--map starts-->
