Improved responsivity and fixed overflow-x issue

--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -41,32 +41,32 @@
     <!--nav starts-->
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
         <div id="navContainer" class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="p-4 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div id="navbar" class="navbar-nav m-auto">
-                    <a href="../index.html" class="mx-3">
+                    <a href="../index.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Home</p>
                         </div>
                     </a>
-                    <a href="./servicios.html" class="mx-3">
+                    <a href="./servicios.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Servicios</p>
                         </div>
                     </a>
-                    <a href="./experiencias.html" class="mx-3">
+                    <a href="./experiencias.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Experiencias</p>
                         </div>
                     </a>
-                    <a href="./equipo.html" class="mx-3">
+                    <a href="./equipo.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Equipo</p>
                         </div>
                     </a>
-                    <a href="./contacto.html" class="mx-3">
+                    <a href="./contacto.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Contacto</p>
                         </div>
@@ -183,4 +183,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
