--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
     <!--nav starts-->
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
         <div id="navContainer" class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="p-4 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div id="navbar" class="navbar-nav m-auto">
-                    <a href="./index.html" class="mx-3">
+                    <a href="./index.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Home</p>
                         </div>
                     </a>
-                    <a href="./pages/servicios.html" class="mx-3">
+                    <a href="./pages/servicios.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Servicios</p>
                         </div>
                     </a>
-                    <a href="./pages/experiencias.html" class="mx-3">
+                    <a href="./pages/experiencias.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Experiencias</p>
                         </div>
                     </a>
-                    <a href="./pages/equipo.html" class="mx-3">
+                    <a href="./pages/equipo.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Equipo</p>
                         </div>
                     </a>
-                    <a href="./pages/contacto.html" class="mx-3">
+                    <a href="./pages/contacto.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Contacto</p>
                         </div>
@@ -85,7 +85,7 @@
                     <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="1"></li>
                     <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="2"></li>
                 </ol>
-                <div id="carousel-inner"class="carousel-inner">
+                <div id="carousel-inner" class="carousel-inner">
                     <div id="carousel-item-1" class="carousel-item active">
                         <img src="assets/img/gallery1.png" class="d-block w-100" alt="vista aérea de río">
                         <div id="carousel-caption-1" class="carousel-caption d-none d-sm-block">
@@ -159,7 +159,7 @@
             </div>
         </section>
         <!--stats end-->
-        
+
         <!--description starts-->
         <section id="who-what-how" class="container-fluid">
             <div class="row px-3">
@@ -249,4 +249,5 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
