Corrected formal aspects of HTML and optimized CSS

--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                             <p class="m-0">Home</p>
                         </div>
                     </a>
-                    <a href="./pages/servicios.html" class="ms-3 me-5">
+                    <a href="./servicios.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Servicios</p>
                         </div>
                     </a>
-                    <a href="./pages/experiencias.html" class="ms-3 me-5">
+                    <a href="./experiencias.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Experiencias</p>
                         </div>
                     </a>
-                    <a href="./pages/equipo.html" class="ms-3 me-5">
+                    <a href="./equipo.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Equipo</p>
                         </div>
                     </a>
-                    <a href="./pages/contacto.html" class="ms-3 me-5">
+                    <a href="./contacto.html" class="ms-3 me-5">
                         <div class="myButton--rounded container-fluid">
                             <p class="m-0">Contacto</p>
                         </div>
@@ -126,7 +126,7 @@
                     <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="who">
                         <div class="card-body">
                             <h3 class="text-center fw-bold display-5">Horas de <br> vuelo</h3>
-                            <p class="text-center display-6">56</p>
+                            <p class="text-center display-6">15</p>
                         </div>
                     </div>
                 </article>
@@ -134,7 +134,7 @@
                     <div class="card h-100" data-aos="fade-left" data-aos-duration="1200" id="what">
                         <div class="card-body">
                             <h3 class="text-center fw-bold display-5">Imágenes capturadas</h3>
-                            <p class="text-center display-6">6.540</p>
+                            <p class="text-center display-6">1.983</p>
                         </div>
                     </div>
                 </article>
@@ -142,7 +142,7 @@
                     <div class="card h-100" data-aos="fade-right" data-aos-duration="1200" id="how">
                         <div class="card-body">
                             <h3 class="text-center fw-bold display-5">Superficie <br> relevada</h3>
-                            <p class="text-center display-6">954.250 m<sup>2</sup></p>
+                            <p class="text-center display-6">234.827 m<sup>2</sup></p>
                         </div>
                     </div>
                 </article>
@@ -151,7 +151,7 @@
                         <div class="card-body">
                             <h3 class="text-center fw-bold display-5">Modelos digitales de elevación</h3>
                             <div class="statBox">
-                                <p class="text-center display-6">7</p>
+                                <p class="text-center display-6">4</p>
                             </div>
                         </div>
                     </div>
@@ -204,34 +204,34 @@
     <footer>
         <!--separator starts-->
         <section class="container-fluid" id="separator">
-            <h2 class="text-center">Contactate con nosotros</h2>
+            <h3 class="text-center">Contactate con nosotros</h3>
         </section>
         <!--separator ends-->
         <!--social networks start-->
         <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row" id="social-networks">
             <div class="container pt-3">
                 <a id="email" href="mailto:contacto@globanterra.com.ar">
-                    <img class="d-block mx-auto" width=70px src="./assets/img/email.png" alt="logo-email">
+                    <img class="d-block mx-auto" src="./assets/img/email.png" alt="logo-email">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="whatsapp" href="https://api.whatsapp.com/send?phone=05493416428768&text=Hola, quiero conocer más sobre GlobanTerra" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="./assets/img/whatsapp.png" alt="logo-whatsapp">
+                    <img class="d-block mx-auto" src="./assets/img/whatsapp.png" alt="logo-whatsapp">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="linkedin" href="https://www.linkedin.com/in/globanterra/" target="=_blank">
-                    <img class="d-block mx-auto" width=70px src="./assets/img/linkedin.png" alt="logo-linkedin">
+                    <img class="d-block mx-auto" src="./assets/img/linkedin.png" alt="logo-linkedin">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="instagram" href="https://www.instagram.com/globanterra/" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="./assets/img/instagram.png" alt="logo-instagram">
+                    <img class="d-block mx-auto" src="./assets/img/instagram.png" alt="logo-instagram">
                 </a>
             </div>
             <div class="container pt-3 pb-3">
                 <a id="twitter" href="https://twitter.com/globanterra" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="./assets/img/twitter.png" alt="logo-twitter">
+                    <img class="d-block mx-auto" src="./assets/img/twitter.png" alt="logo-twitter">
                 </a>
             </div>
         </section>
