--- a/equipo.html
+++ b/equipo.html
@@ -123,34 +123,34 @@
     <footer>
         <!--separator starts-->
         <section class="container-fluid" id="separator">
-            <h2 class="text-center">Contactate con nosotros</h2>
+            <h3 class="text-center">Contactate con nosotros</h3>
         </section>
         <!--separator ends-->
         <!--social networks start-->
         <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row" id="social-networks">
             <div class="container pt-3">
                 <a id="email" href="mailto:contacto@globanterra.com.ar">
-                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
+                    <img class="socialNetLogo d-block mx-auto" src="../assets/img/email.png" alt="logo-email">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="whatsapp" href="https://api.whatsapp.com/send?phone=05493416428768&text=Hola, quiero conocer más sobre GlobanTerra" target="_blank">
-                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/whatsapp.png" alt="logo-whatsapp">
+                    <img class="socialNetLogo d-block mx-auto" src="../assets/img/whatsapp.png" alt="logo-whatsapp">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="linkedin" href="https://www.linkedin.com/in/globanterra/" target="=_blank">
-                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/linkedin.png" alt="logo-linkedin">
+                    <img class="socialNetLogo d-block mx-auto" src="../assets/img/linkedin.png" alt="logo-linkedin">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="instagram" href="https://www.instagram.com/globanterra/" target="_blank">
-                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/instagram.png" alt="logo-instagram">
+                    <img class="socialNetLogo d-block mx-auto" src="../assets/img/instagram.png" alt="logo-instagram">
                 </a>
             </div>
             <div class="container pt-3 pb-3">
                 <a id="twitter" href="https://twitter.com/globanterra" target="_blank">
-                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/twitter.png" alt="logo-twitter">
+                    <img class="socialNetLogo d-block mx-auto" src="../assets/img/twitter.png" alt="logo-twitter">
                 </a>
             </div>
         </section>
